--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "Standard TS-webpack setup",
   "main": "app.ts",
-  "dependencies": {},
+  "dependencies": {
+    "extract-text-webpack-plugin": "^3.0.2"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server",
@@ -16,7 +18,9 @@
   "author": "Shreyas Gangurde",
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^5.2.4",
     "lite-server": "^2.5.4",
+    "style-loader": "^2.0.0",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.2",
     "webpack": "^4.41.2",
